멤버관리 상세 css 수정

--- a/src/admin/member/MemberDetail.module.css
+++ b/src/admin/member/MemberDetail.module.css
@@ -15,8 +15,8 @@
 }
 
 .modal {
-  width: 25%;
-  height:81%;
+  width: 30%;
+  height:70%;
   background: white;
   padding: 10px 20px 20px 20px;
   border-radius: 20px;
@@ -29,16 +29,16 @@
 /* 🎯 새로운 콘텐츠 컨테이너 (버튼과의 간격을 여기서 관리) */
 .modalContent {
     flex-grow: 1;
-    margin-bottom: 30px; /* 버튼 컨테이너와의 간격 */
+    margin-bottom: 0px; /* 버튼 컨테이너와의 간격 */
     /* border:1px solid black; */
 }
 
 /* 모달 제목: 좌측 상단으로 변경 */
 .modalTitle {
-  font-size: 20px;
+  font-size: 22px;
   font-weight: bold;
   text-align: left;
-  /* margin-bottom: 10px;  */
+  margin-top: 20px; 
   color: #696B70;
 }
 
@@ -46,26 +46,32 @@
 .infoList {
   display: flex;
   flex-direction: column;
+  margin-top: 40px; 
 }
 
 /* 정보 키 (아이디, 닉네임 등) */
 .infoKey {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
   color: #696B70;
   margin: 0;
-  margin-top: 10px; 
+  margin-top: 40px; 
 }
 
 .infoKey:first-child {
   margin-top: 0; 
 }
 
+/* 연락처 띄어쓰기 */
+.dash {
+  margin: 0 30px; /* 숫자와 - 사이 간격 조정 */
+}
+
 /* 정보 값 */
 .infoValue {
   font-size: 16px;
   color: #696B70;
-  /* margin: 10px 0 0 0; */
+  margin-top: 10px; 
 }
 
 /* 하단 버튼 컨테이너 */
@@ -75,7 +81,7 @@
  
  /* 🎯 수정: 버튼을 중앙에 모으고, 간격을 줍니다. */
  justify-content: center; 
- gap: 15px; /* 200px 버튼 2개 + 간격 15px로 조정 */
+ gap: 20px; /* 200px 버튼 2개 + 간격 15px로 조정 */
  
  /* width는 자동으로 내부 컨텐츠(415px)를 따라가도록 유지하거나, 
      필요하다면 최대 너비 지정 */
@@ -84,7 +90,7 @@
 
 /* 🎯 버튼 공통 스타일 (200px 너비 유지) */
 .actionButton {
- width: 200px; 
+ width: 260px; 
  height: 48px;
  border: none;
  border-radius: 20px; 
