--- a/src/admin/member/MemberDetail.module.css
+++ b/src/admin/member/MemberDetail.module.css
@@ -101,10 +101,20 @@
 }
 /* 취소 버튼 (회색) */
 .cancelButton {
-  background: #B9B9B9;
+  background: #d9d9d9;
+}
+
+.cancelButton:hover, .cancelButton:active {
+  background-color: #b0b0b0;
+  transform: scale(0.98);
 }
 
 /* 완료 버튼 (파스텔 블루) */
 .completeButton {
   background: #ADB9E3;
+}
+
+.completeButton:hover, .completeButton:active {
+  background-color: #94a4d6;
+  transform: scale(0.98);
 }
